...
            "state" : "translated",
            "value" : "Delete"
          }
        }
      }
    },
    "Details" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Details"
          }
...
      }
    },
    "Next" : {
      "comment" : "A button label that navigates to the next page in a carousel.",
      "isCommentAutoGenerated" : true
    },
    "No Items" : {
      "comment" : "Empty state title",
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
